--- a/action.yml
+++ b/action.yml
@@ -11,4 +11,4 @@ outputs:
         description: AssemblyVersion in the AssemblyInfo file
 runs:
     using: node12
-    main: dist/index.js
+    main: index.js
